--- a/css/style.css
+++ b/css/style.css
@@ -318,7 +318,7 @@ th {
   text-align: center;
   cursor: pointer;
   transition: all 0.3s ease;
-  filter: grayscale(1);
+  /* filter: grayscale(1); */
 }
 
 .brands img:hover {
