--- a/css/style.css
+++ b/css/style.css
@@ -414,7 +414,7 @@ th {
 }
 
 .page-top-banner {
-  background: url(../img/about-header.jpg);
+  background: url(../img/projects/capMaiduguri.jpg);
   background-size: cover;
 }
 
@@ -2324,6 +2324,8 @@ th {
 
 .product-detials-section .details-right {
   padding-bottom: 20px;
+  position: sticky;
+  top: 0
 }
 
 .product-detials-section .details-right ul {
@@ -2332,7 +2334,7 @@ th {
 
 .product-detials-section .details-right ul li {
   margin-bottom: 8px;
-  color: #000;
+  color: #fff;
   font-size: 16px;
   font-weight: 500;
   border-bottom: 1px solid #eee;
@@ -3181,8 +3183,8 @@ th {
 
 .clients-wrap {
   padding: 30px 0px;
-  border-bottom: 1px solid #eee;
-  border-top: 1px solid #eee;
+  /* border-bottom: 1px solid #eee; */
+  /* border-top: 1px solid #eee; */
 }
 
 .single-client {
